# jsocketcan

./: NOTICE  README.md  pom.xml
src/main/java/de/sitec/jsocketcan/: CanFilterStruct.java  CanFrameStruct.java  InterfaceControl.java  InterfaceRequestStruct.java  SocketAddressCanStruct.java  SocketAddressStruct.java  SocketCan.java  TimeValue.java  package.html
src/main/java/de/sitec/jsocketcan/jna/: CanFilterStruct.java  CanFrameStruct.java  InterfaceRequestStruct.java  SocketAddressCanStruct.java  SocketAddressStruct.java  TimeValue.java  package.html
src/main/java/de/sitec_systems/jsocketcan/: SocketCan.java
src/main/javadoc/: overview.html
src/main/native/: CMakeLists.txt
src/main/native/src/: socketcan_jni.c
src/main/resources/: readme
